# geomutil-rust

./: Cargo.toml
.github/workflows/: clippy.yml
examples/: alpha_shape2d.rs  delaunay2d.rs
geomutil_triangulation/: Cargo.toml
geomutil_triangulation/src/: alpha2d.rs  delaunay2d.rs
geomutil_util/: Cargo.toml
geomutil_util/src/: bounding_box.rs  edge.rs  edge2.rs  edge2d.rs  lib.rs  point.rs  point2d.rs  scalar.rs  shape2.rs  shape2d.rs  triangle.rs  triangle2d.rs
src/: lib.rs
triangulation/: Cargo.toml
triangulation/src/: alpha2d.rs  delaunay2d.rs  lib.rs
util/: Cargo.toml
util/src/: edge2d.rs  lib.rs  point.rs  point2d.rs  shape2d.rs  triangle2d.rs
