[package]
name = "geomutil"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
util = { workspace = true }
triangulation = { workspace = true }

[dev-dependencies]
anyhow = "1.0.98"
plotters = "0.3.7"

[workspace]
members = [
  "triangulation",
  "util"
]

[workspace.dependencies]
util = { path = "./util" }
triangulation = { path = "./triangulation" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
