[package]
name = "geomutil"
version = "0.1.0"
edition = "2024"
description = "A Rust library providing geometric functions, including triangulation and alpha shape algorithms."
license = "AGPL-3.0-or-later"
repository = "https://github.com/denisstrizhkin/geomutil-rust"
keywords = ["geometry", "triangulation", "alpha-shape", "computational-geometry"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
util = { workspace = true }
triangulation = { workspace = true }

[dev-dependencies]
anyhow = "1.0.98"
plotters = "0.3.7"

[workspace]
members = [
  "triangulation",
  "util"
]

[workspace.dependencies]
util = { path = "./util" }
triangulation = { path = "./triangulation" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
