[package]
name = "geomutil"
version = "0.1.1"
edition = "2024"
description = "A Rust library providing geometric functions, including triangulation and alpha shape algorithms."
license = "AGPL-3.0-or-later"
repository = "https://github.com/denisstrizhkin/geomutil-rust"
keywords = ["geometry", "triangulation", "alpha-shape"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
geomutil_util = { workspace = true }
geomutil_triangulation = { workspace = true }

[dev-dependencies]
anyhow = "1.0.98"
plotters = "0.3.7"

[workspace]
members = [
  "geomutil_triangulation",
  "geomutil_util"
]

[workspace.dependencies]
geomutil_util = { path = "./geomutil_util", version = "0.1.0" }
geomutil_triangulation = { path = "./geomutil_triangulation", version = "0.1.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
