[package]
name = "geomutil_triangulation"
version = "0.1.1"
edition = "2024"
description = "A Rust library providing triangulation functions."
license = "AGPL-3.0-or-later"
repository = "https://github.com/denisstrizhkin/geomutil-rust"
keywords = ["geometry", "triangulation", "alpha-shape"]

[dependencies]
geomutil_util = { workspace = true }
